--- a/.github/workflows/botpeas.yaml
+++ b/.github/workflows/botpeas.yaml
@@ -29,6 +29,9 @@ jobs:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          NTFY_URL: ${{ secrets.NTFY_URL }}
+          NTFY_TOPIC: ${{ secrets.NTFY_TOPIC }}
+          NTFY_AUTH: ${{ secrets.NTFY_AUTH }}
 
       - name: Create local changes
         run: git add output/botpeas.json
